style: add grainy background

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,8 @@
 
   --color-primary: #1e1e1e;
   --color-secondary: #252526;
+  --color-tertiary: #2D2D2D;
+
   --color-primary-accent: #f1e729;
   --color-secondary-accent: #f40c5c;
 }
